# numpy-c-extension

./: CMakeLists.txt  mymodule.c  setup.in.sh
